--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -6,7 +6,8 @@
 <?import javafx.scene.control.Label?>
 
 <?import javafx.scene.layout.Pane?>
-
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.Tab?>
 
 <?import javafx.scene.control.TabPane?><?import javafx.scene.control.Tab?><?import javafx.scene.layout.AnchorPane?>
 <AnchorPane fx:controller="Controller"
