--- a/src/main/resources/Produce.fxml
+++ b/src/main/resources/Produce.fxml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Tab2Controller"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Tab2Controller">
+   <children>
+      <Label layoutX="175.0" layoutY="86.0" text="Choose Product" />
+      <ListView layoutX="14.0" layoutY="110.0" prefHeight="200.0" prefWidth="407.0" />
+      <Label layoutX="467.0" layoutY="86.0" text="Choose Quantity" />
+      <ComboBox layoutX="436.0" layoutY="117.0" prefWidth="150.0" />
+      <Button layoutX="242.0" layoutY="345.0" mnemonicParsing="false" text="Record Production" />
+   </children>
 </AnchorPane>
