--- a/src/main/resources/Production.fxml
+++ b/src/main/resources/Production.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ProduceController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ProductionController">
    <children>
       <Label layoutX="175.0" layoutY="86.0" text="Choose Product" />
       <ListView layoutX="14.0" layoutY="110.0" prefHeight="200.0" prefWidth="407.0" />
