--- a/src/main/resources/ProductionLog.fxml
+++ b/src/main/resources/ProductionLog.fxml
@@ -3,9 +3,8 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ProductionLogController">
    <children>
-      <TextArea layoutX="200.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" />
+      <TextArea fx:id="proRecordTA" layoutX="21.0" layoutY="100.0" prefHeight="279.0" prefWidth="554.0" />
    </children>
 </AnchorPane>
