--- a/src/main/resources/Production.fxml
+++ b/src/main/resources/Production.fxml
@@ -9,7 +9,7 @@
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ProductionController">
    <children>
       <Label layoutX="175.0" layoutY="86.0" text="Choose Product" />
-      <ListView layoutX="14.0" layoutY="110.0" prefHeight="200.0" prefWidth="407.0" />
+      <ListView fx:id="productListFXML" layoutX="14.0" layoutY="110.0" prefHeight="200.0" prefWidth="407.0" />
       <Label layoutX="467.0" layoutY="86.0" text="Choose Quantity" />
       <ComboBox fx:id="quantityComboBox" layoutX="436.0" layoutY="117.0" prefWidth="150.0" />
       <Button fx:id="recordProductionBttn" layoutX="242.0" layoutY="345.0" mnemonicParsing="false" onAction="#recordProduction" text="Record Production" />
