--- a/src/main/resources/ProductionLog.fxml
+++ b/src/main/resources/ProductionLog.fxml
@@ -5,6 +5,6 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ProductionLogController">
    <children>
-      <TextArea fx:id="proRecordTA" layoutX="21.0" layoutY="100.0" prefHeight="279.0" prefWidth="554.0" />
+      <TextArea fx:id="productionRecordTA" layoutX="21.0" layoutY="100.0" prefHeight="279.0" prefWidth="554.0" />
    </children>
 </AnchorPane>
