--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -5,24 +5,76 @@
 
 <?import javafx.scene.control.Label?>
 
-<?import javafx.scene.layout.Pane?>
+
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.Tab?>
 
 <?import javafx.scene.control.TabPane?><?import javafx.scene.control.Tab?><?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TextArea?>
 <AnchorPane fx:controller="Controller"
             xmlns:fx="http://javafx.com/fxml" >
     <children>
         <TabPane>
-            <Tab fx:id="ProductLine" text="Product Line">
-                <fx:include source="ProductLine.fxml"></fx:include>
+            <Tab text="Product Line">
+                <AnchorPane prefHeight="400.0" prefWidth="600.0" >
+                    <children>
+                        <GridPane layoutX="14.0" layoutY="60.0" prefHeight="95.0" prefWidth="430.0">
+                            <columnConstraints>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            </columnConstraints>
+                            <rowConstraints>
+                                <RowConstraints maxHeight="31.60001220703125" minHeight="10.0" prefHeight="31.60001220703125" vgrow="SOMETIMES" />
+                                <RowConstraints maxHeight="51.599981689453124" minHeight="10.0" prefHeight="33.19998779296875" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            </rowConstraints>
+                            <children>
+                                <TextField fx:id="productNameTF" GridPane.columnIndex="1" GridPane.valignment="CENTER"  />
+                                <TextField fx:id="manufactorTF" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                                <ChoiceBox fx:id="labelChoiceBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                                <Label text="Product Name" />
+                                <Label text="Manufactorer" GridPane.rowIndex="1" />
+                                <Label text="Label" GridPane.rowIndex="2" />
+                            </children>
+                        </GridPane>
+                        <Button layoutX="14.0" layoutY="34.0" mnemonicParsing="false" onAction="#addProduct" text="Add Product" />
+                        <TableView fx:id="productLineTable" layoutX="28.0" layoutY="235.0" prefHeight="150.0" prefWidth="516.0">
+                            <columns>
+                                <TableColumn fx:id="nameColumn" prefWidth="182.4000244140625" text="Product" />
+                                <TableColumn fx:id="typeColumn" minWidth="0.0" prefWidth="168.0" text="Type" />
+                                <TableColumn fx:id="manuColumn" prefWidth="167.20001220703125" text="Manufacturer" />
+                            </columns>
+                        </TableView>
+                        <Label layoutX="251.0" layoutY="191.0" text="Existing Products" />
+                    </children>
+                </AnchorPane>
             </Tab>
-
-            <Tab fx:id="Produce" text="ProductionController">
-                <fx:include source="Production.fxml"></fx:include>
+            <Tab text="ProductionController">
+                <AnchorPane prefHeight="400.0" prefWidth="600.0" >
+                    <children>
+                        <Label layoutX="175.0" layoutY="86.0" text="Choose Product" />
+                        <ListView fx:id="productListFXML" layoutX="14.0" layoutY="110.0" prefHeight="200.0" prefWidth="407.0" />
+                        <Label layoutX="467.0" layoutY="86.0" text="Choose Quantity" />
+                        <ComboBox fx:id="quantityComboBox" layoutX="436.0" layoutY="117.0" prefWidth="150.0" />
+                        <Button fx:id="recordProductionBttn" layoutX="242.0" layoutY="345.0" mnemonicParsing="false" onAction="#recordProduction" text="Record Production" />
+                    </children>
+                </AnchorPane>
             </Tab>
-            <Tab fx:id="ProductionLog" text="Production Log">
-                <fx:include source="ProductionLog.fxml"></fx:include>
+            <Tab text="Production Log">
+                <AnchorPane prefHeight="400.0" prefWidth="600.0">
+                    <children>
+                        <TextArea fx:id="productionRecordTA" layoutX="21.0" layoutY="100.0" prefHeight="279.0" prefWidth="554.0" />
+                    </children>
+                </AnchorPane>
             </Tab>
         </TabPane>
     </children>
