--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -1,31 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Button?>
-
-<?import javafx.scene.control.Label?>
-
-
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.Tab?>
-
-<?import javafx.scene.control.TabPane?><?import javafx.scene.control.Tab?><?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
-<AnchorPane fx:controller="Controller"
-            xmlns:fx="http://javafx.com/fxml" >
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
+
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="Controller">
     <children>
         <TabPane>
+         <Tab text="Employee">
+           <content>
+             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                  <children>
+                     <TextField layoutX="205.0" layoutY="175.0" />
+                     <TextField layoutX="205.0" layoutY="246.0" />
+                     <Label alignment="CENTER" layoutX="137.0" layoutY="14.0" prefHeight="80.0" prefWidth="290.0" text="Employee Login" textAlignment="CENTER">
+                        <font>
+                           <Font name="Microsoft Himalaya" size="40.0" />
+                        </font>
+                     </Label>
+                     <Label layoutX="208.0" layoutY="82.0" text="Enter Login Information">
+                        <font>
+                           <Font size="14.0" />
+                        </font>
+                     </Label>
+                     <Line endX="192.20001220703125" layoutX="279.0" layoutY="74.0" startX="-184.5999755859375" />
+                     <Label layoutX="204.0" layoutY="156.0" prefHeight="18.0" prefWidth="150.0" text="Username:">
+                        <font>
+                           <Font size="14.0" />
+                        </font>
+                     </Label>
+                     <Label layoutX="205.0" layoutY="228.0" text="Password:">
+                        <font>
+                           <Font size="14.0" />
+                        </font>
+                     </Label>
+                     <Button layoutX="204.0" layoutY="292.0" mnemonicParsing="false" text="Login">
+                        <font>
+                           <Font size="14.0" />
+                        </font>
+                     </Button>
+                  </children>
+               </AnchorPane>
+           </content>
+         </Tab>
             <Tab text="Product Line">
-                <AnchorPane prefHeight="400.0" prefWidth="600.0" >
+                <AnchorPane prefHeight="400.0" prefWidth="600.0">
                     <children>
                         <GridPane layoutX="14.0" layoutY="60.0" prefHeight="95.0" prefWidth="430.0">
                             <columnConstraints>
@@ -38,9 +71,9 @@
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
-                                <TextField fx:id="productNameTF" GridPane.columnIndex="1" GridPane.valignment="CENTER"  />
+                                <TextField fx:id="productNameTF" GridPane.columnIndex="1" GridPane.valignment="CENTER" />
                                 <TextField fx:id="manufactorTF" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                                <ChoiceBox fx:id="labelChoiceBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                                <ChoiceBox fx:id="labelChoiceBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                 <Label text="Product Name" />
                                 <Label text="Manufactorer" GridPane.rowIndex="1" />
                                 <Label text="Label" GridPane.rowIndex="2" />
@@ -59,7 +92,7 @@
                 </AnchorPane>
             </Tab>
             <Tab text="ProductionController">
-                <AnchorPane prefHeight="400.0" prefWidth="600.0" >
+                <AnchorPane prefHeight="400.0" prefWidth="600.0">
                     <children>
                         <Label layoutX="175.0" layoutY="86.0" text="Choose Product" />
                         <ListView fx:id="productListFXML" layoutX="14.0" layoutY="110.0" prefHeight="200.0" prefWidth="407.0" />
